Bug 1177011 - Ignore restarting the same content observer in EventStateManager. r=masayuki, a=lmandel